--- a/package.json
+++ b/package.json
@@ -29,9 +29,9 @@
     "date-fns": "^3.0.0",
     "geist": "^1.3.1",
     "lucide-react": "^0.474.0",
-    "next": "14.1.0",
+    "next": "^14.2.29",
     "next-themes": "^0.4.4",
-    "node-nlp": "^5.0.0-alpha.5",
+    "node-nlp": "^3.10.2",
     "openai": "^4.84.0",
     "react": "18.2.0",
     "react-day-picker": "8.10.1",
